--- a/Project 3/style.css
+++ b/Project 3/style.css
@@ -83,16 +83,17 @@ main {
     align-self: flex-end;
 }
 .bar {
-  height: 1px;
-  background-color: white;
-  margin-top: 35px;
+    height: 1px;
+    background-color: white;
+     margin-top: 35px;
 }
 .sidebar h3 {
-  font-size: 20px;
-  margin-top: 35px;
+    font-size: 20px;
+    margin-top: 35px;
 }
 .sidebar p {
     color: hsl(236, 13%, 42%);
+    font-size: 1.1rem;
 }
 h1 {
     font-size: 58px;
@@ -101,46 +102,46 @@ h1 {
     line-height: 1em;
 }
 h2 {
-  font-size: 35px;
-  color: hsl(35, 77%, 62%);
-  margin: 0;
+    font-size: 35px;
+    color: hsl(35, 77%, 62%);
+        margin: 0;
 }
 h3 {
     font-size: 1.5rem;
     margin-top: 0;
 }
 .content-box-1 h3 {
-  font-weight: 700;
+    font-weight: 700;
 }
-.bottom-main-content-1 {
-  grid-row: 3/4;
-  grid-column: 1/2;
-  display: flex;
+#bottom-main-content-1 {
+    grid-row: 3/4;
+    grid-column: 1/2;
+    display: flex;
 }
-.bottom-main-content-2 {
-  grid-row: 3/4;
-  grid-column: 2/3;
-  width: 100%;
-  display: flex;
+#bottom-main-content-2 {
+    grid-row: 3/4;
+    grid-column: 2/3;
+    width: 100%;
+    display: flex;
 }
-.bottom-main-content-3 {
-  grid-row: 3/4;
-  grid-column: 3/4;
-  width: 100%;
-  display: flex;
+#bottom-main-content-3 {
+    grid-row: 3/4;
+    grid-column: 3/4;
+    width: 100%;
+    display: flex;
 }
 .number {
-  color: hsl(233, 8%, 79%);
-  margin-top:0 ;
-  margin-bottom: 10px;
-  font-size: 2rem;
-  font-weight: 700;
+    color: hsl(233, 8%, 79%);
+    margin-top:0 ;
+    margin-bottom: 10px;
+    font-size: 2rem;
+    font-weight: 700;
 }
 .picture {
-  width: 100%;
+    width: 100%;
 }
 .bottom-picture {
-  width: 50%;
+    width: 50%;
 }
 .picture-1{
     height: 100%;
@@ -163,8 +164,8 @@ h3 {
     color:hsl(236, 13%, 42%);
 }
 p{
-   margin-bottom: 0;
-   line-height: 1.5rem;
+    margin-bottom: 0;
+    line-height: 1.5rem;
 }
 .footer-box {
     padding-left: 20px;
@@ -180,12 +181,12 @@ p{
 }
 @media screen and (max-width: 768px) {
     ul.nav-desktop {
-      display: none;
+        display: none;
     }
     div.hamburger {
-      display: flex;
-      justify-content: flex-end;
-      align-items: center;
+        display: flex;
+        justify-content: flex-end;
+        align-items: center;
     }
     main{
         display: flex;
@@ -201,5 +202,33 @@ p{
     }
     h1{
         font-size: 4.5rem;
+    }   
+    .picture-2{
+        width: 25%;
     }
-  }
+    .picture-3{
+        width: 25%;
+    }
+    .picture-4{
+        width: 25%;
+    }
+    .footer-box {
+        min-width: 100%;
+    }
+    h1 {
+        font-size: 30px;
+    }
+    h3 {
+        font-size: 1.25rem;
+    }
+    .secondary-content > p{
+        font-size: 0.75rem;
+        line-height: 1.5rem;
+    }
+    body {
+        margin: 0;
+    }
+    .footer-box {
+        min-width: 0;
+    }
+}
