--- a/Project 3/style.css
+++ b/Project 3/style.css
@@ -2,31 +2,34 @@
 
 body {
   margin: 0;
-}
-.page {
-  width: 375px;
-  height: 100pv;
-  background-color: bisque;
-  padding: 15px;
-  margin: 0 auto;
-}
 
-.photo {
-  width: 100%;
-  padding: 15px;
-}
+  @media screen and (max width: 767px) {
+  
+  .page {
+    width: 100%;
+    height: 100pv;
+    background-color: bisque;
+    padding: 15px;
+    margin: 0 auto;
+  }
 
-.photoandtext {
-  border: solid;
-  padding: 15px;
-}
+  .photo {
+    width: 100%;
+    padding: 15px;
+  }
 
-.dark {
-  border: solid;
-  padding: 15px;
-}
+  .photoandtext {
+    border: solid;
+    padding: 15px;
+  }
 
-.lastsection {
-  border: solid;
-  padding: 15px;
+  .dark {
+    border: solid;
+    padding: 15px;
+  }
+
+  .lastsection {
+    border: solid;
+    padding: 15px;
+  }
 }
