--- a/Project 2/four-card-feature/style.css
+++ b/Project 2/four-card-feature/style.css
@@ -4,17 +4,16 @@
     font-family: "Poppins";
     padding-right: 5px;
     padding-left: 5px;
+    background-color: hsl(0,0%,98%)
 }
 
 html,
 body {
-    width: 100%;
     height: 100%;
 }
 
 .container-1 {
     display: flex;
-    height: 100%;
     background-color: hsl(0,0%,98%);
     flex-direction: column;
     justify-content: center;
@@ -23,11 +22,10 @@ body {
 }
 
 .text-1 {
-    justify-content: center;
     flex-direction: column;
     display: flex;
-    align-items: center;
     margin-bottom: 10px;
+    width: 600px;
 }
 
 .item {
@@ -53,26 +51,29 @@ body {
 .item-3 {
     margin-top: 8px;
     font-size: 17px;
+    text-align: center;
+    
 }
 
 .container-2 {
-    height: 100%;
-    width: 100%;
+    
     display: flex;
     background-color: hsl(0,0%,98%);
     margin: 15px 0px;
-    flex-direction: column;
     justify-content: start;
-    align-items: center;
+    align-items: center; 
+    padding-left: 100px;
 }
 
 .box {
-    align-self: flex-start;
+    height: 250px;
+    width: 390px;
     color: hsl(229, 6%, 66%);
     padding: 0px 0px;
     border-radius: 10px;
     margin: 0px 10px 30px 0px;
     padding: 0px 15px 5px 10px;
+    box-shadow: 0 2px 2px 2px hsl(229, 6%, 66%);
 }
 
 .subtitle {
@@ -81,45 +82,38 @@ body {
 }
 
 .box-1 {
-    width: 400px;
-    height: 250px;
-    border: 1px solid hsl(229, 6%, 66%);
+    /* border:hsl(229, 6%, 66%); */
     border-top: 5px solid;
     border-top-color: hsl(180, 62%, 55%);
     position: relative;
+   
 }
 
 .box-2 {
-    width: 400px;
-    height: 250px;
-    border: 1px solid hsl(229, 6%, 66%);
+    /* border: 1px solid hsl(229, 6%, 66%); */
     border-top: 5px solid;
     border-top-color: hsl(0, 78%, 62%);
     position: relative;
 }
 
 .box-3 {
-    width: 400px;
-    height: 250px;
-    border: 1px solid hsl(229, 6%, 66%);
+    /* border: 1px solid hsl(229, 6%, 66%); */
     border-top: 5px solid;
     border-top-color: hsl(34, 97%, 64%);
     position: relative;
 }
 
 .box-4 {
-    width: 400px;
-    height: 250px;
-    border: 1px solid hsl(229, 6%, 66%);
+    /* border: 1px solid hsl(229, 6%, 66%); */
     border-top: 5px solid;
     border-top-color: hsl(212, 86%, 64%);
     position: relative;
 }
 
 .picture {
-    position: absolute;
-    bottom: 30px;
-    right: 30px;
+    padding-left: 300px;
+    padding-top: 25px;
+
 }
 
 
