--- a/Project 3/style.css
+++ b/Project 3/style.css
@@ -1,75 +1,76 @@
 * {
-  font-family: "Inter", sans-serif;
-  padding: 0;
-  box-sizing: border-box;
-  font-size: 15px;
+    font-family: "Inter", sans-serif;
+    padding: 0;
+    box-sizing: border-box;
+    font-size: 15px;
 }
 body {
-  height: 100vh;
-  margin: 100px 100px;
-  justify-content: center;
+    height: 100vh;
+    margin: 100px 100px;
+    justify-content: center;
+    padding: 20px;
 }
 nav {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  padding-bottom: 15px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding-bottom: 15px;
 }
 ul {
-  display: flex;
-  flex-direction: row;
-  list-style: none;
-  justify-content: flex-end;
-  gap: 12px;
+    display: flex;
+    flex-direction: row;
+    list-style: none;
+    justify-content: flex-end;
+    gap: 12px;
 }
 li {
-  margin: 2%;
-  color: hsl(236, 13%, 42%);
-  font-weight: 400;
+    margin: 2%;
+    color: hsl(236, 13%, 42%);
+    font-weight: 400;
 }
 li:active {
-  color: hsl(5, 85%, 63%);
+    color: hsl(5, 85%, 63%);
 }
-li:hover {
-  cursor: pointer;
+    li:hover {
+    cursor: pointer;
 }
 div.hamburger {
-  display: none;
-  height: 65px;
+    display: none;
+    height: 65px;
 }
 i {
-  font-size: 45px;
+    font-size: 45px;
 }
 main {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-template-rows: 2fr 1fr auto;
-  column-gap: 30px;
-  row-gap: 40px;
-  justify-items: center;
-  margin-top: 20px;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: 2fr 1fr auto;
+    column-gap: 30px;
+    row-gap: 40px;
+    justify-items: center;
+    margin-top: 20px;
 }
 .main-picture {
-  grid-row: 1/2;
-  grid-column: 1/3;
+    grid-row: 1/2;
+    grid-column: 1/3;
 }
 .main-content {
-  grid-row: 2/3;
-  grid-column: 1/2;
+    grid-row: 2/3;
+    grid-column: 1/2;
 }
 .secondary-content {
-  grid-row: 2/3;
-  grid-column: 2/3;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
+    grid-row: 2/3;
+    grid-column: 2/3;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 .sidebar {
-  grid-row: 1/3;
-  grid-column: 3/4;
-  background-color: hsl(240, 100%, 5%);
-  color: white;
-  padding: 35px 25px 35px 25px;
+    grid-row: 1/3;
+    grid-column: 3/4;
+    background-color: hsl(240, 100%, 5%);
+    color: white;
+    padding: 35px 25px 35px 25px;
 }
 .button {
     display: flex;
@@ -85,7 +86,7 @@ main {
 .bar {
     height: 1px;
     background-color: white;
-     margin-top: 35px;
+    margin-top: 35px;
 }
 .sidebar h3 {
     font-size: 20px;
@@ -104,7 +105,7 @@ h1 {
 h2 {
     font-size: 35px;
     color: hsl(35, 77%, 62%);
-        margin: 0;
+    margin: 0;
 }
 h3 {
     font-size: 1.5rem;
@@ -139,6 +140,7 @@ h3 {
 }
 .picture {
     width: 100%;
+    object-fit: cover;
 }
 .bottom-picture {
     width: 50%;
@@ -170,7 +172,7 @@ p{
 .footer-box {
     padding-left: 20px;
 }
-.footer-box p {
+.bottom-content {
     color: hsl(236, 13%, 42%);
 }
 .p-secondary-content{
@@ -179,7 +181,7 @@ p{
 .p-read-more{
     margin: 15px 0px 15px 0px;
 }
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 890px) {
     ul.nav-desktop {
         display: none;
     }
@@ -192,44 +194,71 @@ p{
         display: flex;
         flex-direction: column;
         padding-bottom: 60px;
+        margin-top: 0;
+        row-gap: 30px;
     }
     .number{
         font-size: 2rem;
+        margin-top: 5px;
     }
     .button{
         margin-top: 20px;
+        margin-bottom: 20px;
         width: 50%;
     }
-    h1{
-        font-size: 4.5rem;
-    }   
+    .main-picture{
+      height: 80vw
+    }
     .picture-2{
-        width: 25%;
+        width: 30%;
     }
     .picture-3{
-        width: 25%;
+        width: 30%;
     }
     .picture-4{
-        width: 25%;
+        width: 30%;
     }
     .footer-box {
-        min-width: 100%;
+        min-width: 50%;
     }
-    h1 {
-        font-size: 30px;
+    h1{
+      font-size: 2.75rem;
+    }
+    h2 {
+      font-size: 2rem;
     }
     h3 {
-        font-size: 1.25rem;
-    }
-    .secondary-content > p{
-        font-size: 0.75rem;
-        line-height: 1.5rem;
+        font-size: 1.2rem;
+        margin-bottom: -4px;
+        line-height: 1.75rem;
     }
     body {
         margin: 0;
-        padding: 20px;
     }
-    .footer-box {
-        min-width: 0;
+    .footer-box p {
+        color: hsl(233, 8%, 79%);
+        line-height: 1.75rem;
+    } 
+    .secondary-content > p{
+        font-size: 0.95rem;
+        line-height: 1.75rem;
     }
+    .p-secondary-content {
+        margin-top: -1rem;
+    }
+    nav {
+        padding-bottom: 0;
+    }
+    .sidebar p {
+        font-size: 0.95rem;
+    }
+    .sidebar {
+        padding: 20px 25px 20px 25px;
+        margin-bottom: 30px;
+    }      
 }
+@media screen and (min-width:891px) and (max-width: 1250px) {
+    main {
+        grid-template-rows: 3fr 1fr auto;
+    }
+  }
