--- a/Project 3/style.css
+++ b/Project 3/style.css
@@ -31,7 +31,7 @@ li {
 li:active {
     color: hsl(5, 85%, 63%);
 }
-    li:hover {
+li:hover {
     cursor: pointer;
 }
 div.hamburger {
@@ -82,6 +82,7 @@ main {
     letter-spacing: 5px;
     text-align: center;
     align-self: flex-end;
+    cursor: pointer;
 }
 .bar {
     height: 1px;
@@ -247,7 +248,7 @@ p{
         margin-top: -1rem;
     }
     nav {
-        padding-bottom: 0;
+        padding-bottom: 10px;
     }
     .sidebar p {
         font-size: 0.95rem;
@@ -255,7 +256,14 @@ p{
     .sidebar {
         padding: 20px 25px 20px 25px;
         margin-bottom: 30px;
-    }      
+    } 
+    .logo {
+        scale: 0.7;
+    }
+    .nav-content {
+        scale: 0.8;
+    } 
+    
 }
 @media screen and (min-width:891px) and (max-width: 1250px) {
     main {
