--- a/Project 2/four-card-feature/style.css
+++ b/Project 2/four-card-feature/style.css
@@ -4,6 +4,7 @@ body {
   font-family: "Poppins", sans-serif;
   margin: 0;
   border: 0;
+  width: fit-content;
 }
 
 .container {
@@ -119,5 +120,84 @@ h1 {
   justify-content: flex-end;
 }
 
-@media (max-width: 375px){
-};
+@media (max-width: 400px){
+
+  html {
+    width:fit-content;
+  }
+  body {
+   flex-wrap: wrap;
+   text-align: center;
+  }
+  
+  .secB {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 20px; 
+    margin-top: 20px;
+  }
+
+  .SectionB {
+    display: flex;
+    flex-direction: column;
+    height: auto;
+    gap: 20px;
+    width: auto;
+    margin: auto;
+  }
+
+  .column {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    gap:20px;
+  }
+
+  p {
+    text-align: left;
+  }
+}
+
+
+/* @media screen and (max-width:480px) {
+  .supervisor{
+     
+  }
+  .square{
+      width: 80%;
+      height: auto; 
+  }
+
+  .reliable {
+      justify-content: center;
+      width: 90%;
+      font-size: 12px;
+  }
+
+  .reliable> p {
+      font-size: 14px; 
+      margin-top:10px; 
+      padding:10px 20px 0px 20px; 
+
+  }
+
+  .column {
+      width: 100%; 
+  }
+
+  h3 {
+      margin-bottom: 0;
+      margin-top: 10px;  
+  }
+
+  .square>p {
+      margin-top:5px; 
+  }
+
+  .square img {
+      height: 56px; 
+      width:56px; 
+  }
+
+  } */
