--- a/Project 3/styles.css
+++ b/Project 3/styles.css
@@ -31,15 +31,18 @@ html {
 .list {
   grid-area: list;
   background-color: hsl(240, 100%, 5%);
+  height: calc(700px - 10vw);
 }
 
 .bottom {
   grid-area: bottom;
   display: flex;
+  margin-top: 10px;
+  padding-top: calc(200px - 10vw);
 }
 
 .logo {
-  height: 5vh;
+  height: 30%;
 }
 
 .menu {
@@ -117,8 +120,8 @@ h3 {
   background-color: hsl(236, 13%, 42%);
   width: 85%;
   height: 1px;
-  margin-left: 7%;
-  margin-top: 8%;
+  margin-left: 4%;
+  margin-top: 5%;
   margin-bottom: 8%;
 }
 
@@ -156,13 +159,200 @@ h5 {
   color: hsl(236, 13%, 42%);
 }
 
-@media (max-width: 1250px) {
+.hamburger {
+  display: none;
+}
+
+.picturemob {
+  display: none;
+}
+
+@media (max-width: 1030px) {
   .container {
-    display: inline-block;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: 100%;
   }
   .main {
     margin-bottom: 0;
-    height: 600px;
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    align-items: center;
   }
-  .tekst {display: inline-block;}
+  .tekst {
+    display: inline-block;
+    margin-top: 0;
+  }
+  .list {
+    margin-top: 0px;
+    width: 90vw;
+    height: 560px;
+  }
+
+  .logo {
+    height: 30px;
+  }
+
+  .header {
+    justify-content: flex-start;
+    padding-top: 20px;
+    margin-left: 0px;
+  }
+
+  .nav {
+    display: none;
+  }
+  .hamburger {
+    display: block;
+    margin-right: 5px;
+  }
+
+  .picture {
+    display: none;
+  }
+  .menu {
+    width: 80vw;
+  }
+  .paragraph {
+    margin-top: 0;
+  }
+  .picturemob {
+    display: block;
+    width: 90vw;
+    margin-top: 30px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  .tekst {
+    height: 420px;
+    margin-left: auto;
+    margin-right: auto;
+    width: 90vw;
+  }
+  .title {
+    margin-top: 0;
+    margin-bottom: 0;
+  }
+  .paragraph {
+    width: 100%;
+    padding-left: 0;
+  }
+  .bottom {
+    display:flex;
+    padding-top: 0;
+    width: 90vw;
+    
+  }
+  .bottxt {
+    margin-top: 0;
+    display: inline;
+    width: 70%;
+    padding-top: 10px;
+  }
+  .botpictures {
+    flex-wrap: nowrap;
+  }
+  h5 {
+    margin-top: 5px;
+  }
+  .botp {margin-top: 7px;}
+  .botpictures {height: 100px;}
+}
+
+@media (max-width: 560px) {
+  .container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: 100%;
+  }
+  .main {
+    margin-bottom: 0;
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    align-items: center;
+  }
+  .tekst {
+    display: inline-block;
+    margin-top: 0;
+  }
+  .list {
+    margin-top: 0px;
+    width: 90vw;
+    height: 560px;
+  }
+
+  .logo {
+    height: 30px;
+  }
+
+  .header {
+    justify-content: flex-start;
+    padding-top: 20px;
+    margin-left: 0px;
+  }
+
+  .nav {
+    display: none;
+  }
+  .hamburger {
+    display: block;
+    margin-right: 5px;
+  }
+
+  .picture {
+    display: none;
+  }
+  .menu {
+    width: 80vw;
+  }
+  .paragraph {
+    margin-top: 0;
+  }
+  .picturemob {
+    display: block;
+    width: 90vw;
+    margin-top: 30px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  .tekst {
+    height: 420px;
+    margin-left: auto;
+    margin-right: auto;
+    width: 90vw;
+  }
+  .title {
+    margin-top: 0;
+    margin-bottom: 0;
+  }
+  .paragraph {
+    width: 100%;
+    padding-left: 0;
+  }
+  .bottom {
+    display:flex;
+    padding-top: 0;
+    width: 90vw;
+    flex-wrap: wrap;
+  }
+  .bottxt {
+    margin-top: 0;
+    display: inline;
+    width: 70%;
+    padding-top: 10px;
+  }
+  .botpictures {
+    flex-wrap: nowrap;
+  }
+  h5 {
+    margin-top: 5px;
+  }
+  .botp {margin-top: 7px;}
+  .botpictures {height: 100px;}
 }
