--- a/qr-code/style.css
+++ b/qr-code/style.css
@@ -1,45 +1,47 @@
+@import url("https://fonts.googleapis.com/css2?family=Outfit:wght@400;700&display=swap");
+
+html {
+  height: 100vh;
+}
+
 body {
-    background-color: hsl(212, 45%, 89%);
-    font-family: 'Outfit', sans-serif;
-    max-width: 1440px;
-    margin: 50px auto;
-    height: 100vh;
+  background-color: hsl(212, 45%, 89%);
+  font-family: "Outfit", sans-serif;
+  margin: 0;
+  height: 100%;
+  display: flex;
 }
 
 img {
-    height: 200px;
-    border-radius: 5%;
-    margin: 10px 10px 10px 10px;
+  border-radius: 5%;
+  margin: 13px;
 }
 
 div {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    background: hsl(0, 0%, 100%);
-    border-radius: 5%;
-    height: 350px;
-    width: 230px;
-    margin: 200px auto;
-    box-shadow: 0 0 20px lightgray;
+  display: flex;
+  flex-direction: column;
+  background: hsl(0, 0%, 100%);
+  border-radius: 5%;
+  width: 300px;
+  margin: auto;
+  box-shadow: 0 0 20px lightgray;
 }
 
 h1 {
-    color:hsl(218, 44%, 22%);
-    font-weight: 700;
-    font-display: center;
-    margin: 10px 20px 10px 20px;
-    text-align: center;
-    font-family: "Outfit";
-    font-size: 15px;
+  color: hsl(218, 44%, 22%);
+  font-weight: 700;
+  margin: 10px 20px 10px 20px;
+  text-align: center;
+  font-size: 20px;
 }
+
 p {
-    color:hsl(220, 15%, 55%);
-    font-weight: 400;
-    display: block;
-    font-display: center;
-    margin: 10px 15px 10px 15px;
-    text-align: center;
-    font-family: "Outfit";
-    font-size: 12px;
+  color: hsl(220, 15%, 55%);
+  font-weight: 400;
+  display: block;
+  font-display: center;
+  margin: 10px 15px 10px 15px;
+  text-align: center;
+  font-size: 15px;
+  padding: 3px 3px 20px 3px;
 }
