--- a/product-card/style.css
+++ b/product-card/style.css
@@ -1,29 +1,23 @@
+@import url("@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500;700&display=swap');");
+@import url("https://fonts.googleapis.com/css2?family=Fraunces:opsz,wght@9..144,700&family=Montserrat:wght@500&display=swap");
+
 * {
-  padding: 0;
   box-sizing: border-box;
 }
 html {
   font-size: 14px;
   display: flex;
-  align-content: center;
-  max-width: 1440px;
   height: 100%;
-  margin: 0 auto;
 }
 
 body {
   background-color: hsl(30, 38%, 92%);
-
   margin: 0 auto;
   display: flex;
-  justify-content: center;
-  align-content: center;
-  align-items: center;
 }
 
 .First {
   background-color: hsl(30, 38%, 92%);
-  flex: 1 1 50%;
   width: 50%;
 }
 
@@ -31,7 +25,6 @@ body {
   background-color: white;
   border-radius: 0 3% 3% 0;
   width: 50%;
-  margin: 0px;
   padding: 30px;
 }
 
@@ -49,6 +42,11 @@ button {
   font-size: 15px;
   font-family: "Montserrat", sans-serif;
   border: none;
+}
+
+button:hover {
+  background-color: hsl(212, 21%, 14%);
+  cursor: grab;
 }
 
 img {
@@ -70,16 +68,13 @@ img {
   font-family: "Fraunces", serif;
   font-weight: 700;
   font-size: 40px;
-  padding-right: 60px;
   line-height: 40px;
 }
 
 .text {
-  font-size: 14px;
-  font-weight: 500;
   font-family: "Montserrat", sans-serif;
   color: hsl(228, 12%, 48%);
-  padding-right: 60px;
+  padding-right: 45px;
   line-height: 25px;
 }
 
@@ -102,6 +97,7 @@ section {
   align-self: center;
   width: 60vh;
 }
+
 .prices {
   display: flex;
   gap: 20px;
@@ -111,12 +107,6 @@ section {
 .cart {
   height: auto;
   width: auto;
-}
-
-.buttonSet {
-  display: flex;
-  justify-content: space-around;
-  gap: 10px;
 }
 
 @media (max-width: 376px) {
@@ -129,6 +119,7 @@ section {
     display: flex;
     flex-direction: column;
     width: 100%;
+    margin: 20px;
   }
 
   img {
@@ -136,15 +127,18 @@ section {
     height: 100%;
     border-radius: 3% 3% 0 0;
   }
+
   .First {
     width: auto;
     margin: 0 20px;
   }
+
   .Second {
     background-color: white;
     border-radius: 0 0 3% 3%;
     width: auto;
     margin: 0 20px;
+    padding: 15px;
   }
 
   .Gabrielle {
@@ -156,4 +150,7 @@ section {
     padding-right: 10px;
   }
 
+  .price {
+    margin: 15px 0;
+  }
 }
