--- a/Project 2/four-card-feature/style.css
+++ b/Project 2/four-card-feature/style.css
@@ -1,15 +1,24 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;400;600&display=swap");
+
+html {
+  height: 100%;
+  min-width: fit-content;
+}
+
 body {
   font-size: 15px;
   background-color: hsl(0, 0%, 98%);
   font-family: "Poppins", sans-serif;
   margin: 0;
-  border: 0;
-  width: fit-content;
+  width: auto;
+  display: flex;
+  justify-content: center;
+  align-content: center;
+  height: 100%;
 }
 
 .container {
-  max-width: 1440px;
-  margin: 50px auto;
+  margin: auto;
 }
 
 p {
@@ -35,7 +44,7 @@ p {
 }
 
 .Reliable {
-  color: hsl(234, 12%, 34%);
+  color: hsl(229, 6%, 66%);
   font-weight: 400;
   font-size: 28px;
 }
@@ -49,6 +58,8 @@ p {
 .our {
   color: hsl(229, 6%, 66%);
   font-size: 18px;
+  width: 50%;
+  text-align: center;
 }
 
 h1 {
@@ -56,7 +67,10 @@ h1 {
   color: hsl(234, 12%, 34%);
 }
 
-.supervisor {
+.supervisor,
+.team,
+.karma,
+.calculator {
   border-top: 5px solid hsl(180, 62%, 55%);
   border-radius: 3%;
   background-color: white;
@@ -64,44 +78,28 @@ h1 {
   -moz-box-shadow: 4px 16px 34px -16px rgba(181, 181, 191, 1);
   box-shadow: 4px 16px 34px -16px rgba(181, 181, 191, 1);
   width: 300px;
-  height: 35%;
   padding: 25px;
 }
+
 .supB {
   display: flex;
   align-items: center;
 }
 
+.supervisor {
+  border-top: 5px solid hsl(180, 62%, 55%);
+}
+
 .team {
   border-top: 5px solid hsl(0, 78%, 62%);
-  border-radius: 3%;
-  background-color: white;
-  -webkit-box-shadow: 4px 16px 34px -16px rgba(181, 181, 191, 1);
-  -moz-box-shadow: 4px 16px 34px -16px rgba(181, 181, 191, 1);
-  box-shadow: 4px 16px 34px -16px rgba(181, 181, 191, 1);
-  width: 300px;
-  padding: 25px;
 }
+
 .karma {
   border-top: 5px solid hsl(34, 97%, 64%);
-  border-radius: 3%;
-  background-color: white;
-  -webkit-box-shadow: 4px 16px 34px -16px rgba(181, 181, 191, 1);
-  -moz-box-shadow: 4px 16px 34px -16px rgba(181, 181, 191, 1);
-  box-shadow: 4px 16px 34px -16px rgba(181, 181, 191, 1);
-  width: 300px;
-  padding: 25px;
 }
+
 .calculator {
   border-top: 5px solid hsl(212, 86%, 64%);
-  border-radius: 3%;
-  background-color: white;
-  -webkit-box-shadow: 4px 16px 34px -16px rgba(181, 181, 191, 1);
-  -moz-box-shadow: 4px 16px 34px -16px rgba(181, 181, 191, 1);
-  box-shadow: 4px 16px 34px -16px rgba(181, 181, 191, 1);
-  width: 300px;
-  height: 35%;
-  padding: 25px;
 }
 
 .cal1 {
@@ -120,21 +118,22 @@ h1 {
   justify-content: flex-end;
 }
 
-@media (max-width: 400px){
-
+@media (max-width: 400px) {
   html {
-    width:fit-content;
+    height: auto;
+    margin: 25px 15px;
   }
+
   body {
-   flex-wrap: wrap;
-   text-align: center;
+    flex-wrap: wrap;
+    text-align: center;
   }
-  
+
   .secB {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    gap: 20px; 
+    gap: 20px;
     margin-top: 20px;
   }
 
@@ -151,53 +150,26 @@ h1 {
     display: flex;
     flex-direction: column;
     justify-content: space-around;
-    gap:20px;
+    gap: 20px;
   }
 
   p {
     text-align: left;
   }
+
+  .Reliable {
+    font-size: 25px;
+  }
+
+  .our {
+    width: 100%;
+    margin-bottom: 15px;
+  }
+
+  .supervisor,
+  .team,
+  .karma,
+  .calculator {
+    text-align: left;
+  }
 }
-
-
-/* @media screen and (max-width:480px) {
-  .supervisor{
-     
-  }
-  .square{
-      width: 80%;
-      height: auto; 
-  }
-
-  .reliable {
-      justify-content: center;
-      width: 90%;
-      font-size: 12px;
-  }
-
-  .reliable> p {
-      font-size: 14px; 
-      margin-top:10px; 
-      padding:10px 20px 0px 20px; 
-
-  }
-
-  .column {
-      width: 100%; 
-  }
-
-  h3 {
-      margin-bottom: 0;
-      margin-top: 10px;  
-  }
-
-  .square>p {
-      margin-top:5px; 
-  }
-
-  .square img {
-      height: 56px; 
-      width:56px; 
-  }
-
-  } */
